ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rs-ingress
  namespace: kgs-web
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kgs-dam-resourcespace-http
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: kgs-dam-resourcespace-https
            port:
              number: 443
        path: /
        pathType: Prefix
